# digitize

./: Cargo.toml
src/: lib.rs  traits.rs
