[package]
name = "digitize"
version = "0.1.3"
edition = "2021"
authors = ["beetle"]
license = "MIT"
description = "Traits for accessing digits of primitive integers & floats"
repository = "https://github.com/Mearkatz/beetle_fraction"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinyvec = "1.8.1"
